# MesaBackendRedo

./: README.md  pyproject.toml
tratech/: .env  manage.py
tratech/action/: serializers.py  urls.py
tratech/actions/: serializers.py  views.py
tratech/courses/: models.py
tratech/courses/migrations/: 0001_initial.py  0002_initial.py
tratech/enrollments/: models.py
tratech/enrollments/migrations/: 0001_initial.py  0002_initial.py
tratech/lessons/: models.py
tratech/lessons/migrations/: 0001_initial.py
tratech/modules/: models.py
tratech/modules/migrations/: 0001_initial.py
tratech/tratech/: asgi.py  settings.py  urls.py  wsgi.py
tratech/users/: apps.py  middleware.py  models.py  signals.py  urls.py  views.py
tratech/users/migrations/: 0001_initial.py  0002_alter_user_email.py  0003_remove_user_name.py
